--- a/browser.html
+++ b/browser.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <title>Vivaldi</title>
     <link rel="stylesheet" href="style/common.css" />
+    <!-- <link rel="stylesheet" href="Mods/bookmark-bar.css" /> -->
   </head>
   <body style="
-    background-color: #d4d4d4;
+    background-color: #444444;
     background-image: url('resources/vivaldi-splash-icon.svg');
     background-size: 16%;
     background-position: center;
@@ -18,5 +19,6 @@
     <script src="urlbar-bundle.js"></script>
     <script src="components-bundle.js"></script>
     <script src="bundle.js"></script>
+    <script src="injectMods.js"></script>
   </body>
 </html>
