--- a/browser.html
+++ b/browser.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Vivaldi</title>
+    <title>Vivaldi MD</title>
     <link rel="stylesheet" href="style/common.css" />
     <!-- <link rel="stylesheet" href="Mods/bookmark-bar.css" /> -->
   </head>
